# Chatbot_Prototype

chatbot_frontend/: package-lock.json  package.json
chatbot_frontend/src/: App.tsx  Chatroom.tsx  main.tsx
chatbot_frontend/src/components/: BotInputBubble.tsx  SideBarItemBox.tsx  UserInputBubble.tsx
chatbot_frontend/src/layout/: header.tsx  main_content.tsx  main_message.tsx  main_sidebar.tsx  user_text_input.tsx
chatbot_frontend/src/types/: api_static.ts  chatbot_type.ts
chatbot_python/: README.md  pyproject.toml
chatbot_python/src/: app.py
chatbot_python/src/agent/: ChatbotManager.py  GraphAgent.py  MemoryManager.py  agent_utility.py
chatbot_python/src/agent/chatbot/: ChatbotGraphAgent.py  NarratorActionAgent.py  chatbot_type.py  narrator_type.py
chatbot_python/src/agent/memory/: memory_agent.py  memory_prompt.py  memory_type.py
chatbot_python/src/agent/tools/: ultimate_json_parser.py  weather_tool.py
chatbot_python/src/chatbot_python/: __init__.py
chatbot_python/src/database/: bot_chat_sql.py  bot_narrator_sql.py  chatbot_memory_db.py  chatbot_messages_db.py  chatbot_npc_db.py  chatroom_db.py  db_init.py  db_manager.py
chatbot_python/src/model/: chatbot_model.py
chatbot_python/src/prompt/: chatbot_prompt.py  scenario_prompt.py
chatbot_python/src/router/: chatbot_route.py  chatbot_route_model.py
chatbot_python/src/utility/: llm_static.py  simple_prompt_factory.py  singleton_pattern.py  static_text.py  utility_method.py
chatbot_python/src/websocket/: socket_static.py  websocket_manager.py
chatbot_python/static_asset/: database_init.sql
(+6 files in other folders)
