[project]
name = "chatbot-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hsinpa", email = "hsinpa@gmail.com" }
]
dependencies = [
    "langchain>=0.2.7",
    "fastapi>=0.111.1",
    "langgraph>=0.1.8",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.1.16",
    "langfuse>=2.39.1",
    "psycopg[binary]>=3.2.1",
    "pgvector>=0.3.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_python"]
